[gd_scene load_steps=4 format=3 uid="uid://3magf4qot0ek"]

[ext_resource type="Script" path="res://scripts/paddle_laser_mode.gd" id="2_dp02d"]
[ext_resource type="PackedScene" uid="uid://d3lbrecxfhffr" path="res://scenes/laser.tscn" id="2_mjshj"]
[ext_resource type="Texture2D" uid="uid://dsyj3w4s364th" path="res://assets/BreakOut Assets x2.png" id="2_od8bi"]

[node name="PaddleLaser" type="Node2D" groups=["Paddle"]]
script = ExtResource("2_dp02d")
laser_projectile_scene = ExtResource("2_mjshj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_od8bi")
region_enabled = true
region_rect = Rect2(96, 384, 64, 16)

[node name="LeftBulletMuzzle" type="Marker2D" parent="."]
position = Vector2(-16, -16)

[node name="RightBulletMuzzle" type="Marker2D" parent="."]
position = Vector2(16, -16)

[node name="LaserCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
